# cyanea

./: .gitignore  Dockerfile  README.md  docker-compose.yml  fly.toml  mise.toml  mix.exs
.claude/: CLAUDE.md  ROADMAP.md
assets/: package-lock.json  package.json  tailwind-preset.cjs  tailwind.config.js
assets/css/: app.css  tokens.css
assets/js/: app.js  notebook_worker.js  output_renderers.js
config/: config.exs  dev.exs  runtime.exs  test.exs
lib/cyanea/: accounts.ex  activity.ex  align.ex  application.ex  artifacts.ex  chem.ex  citations.ex  compute.ex  core.ex  discussions.ex  federation.ex  files.ex  follows.ex  formats.ex  gpu.ex  hash.ex  ml.ex  native.ex  nif_helper.ex  notebooks.ex  notifications.ex  omics.ex  ontologies.ex  organizations.ex  phylo.ex  previews.ex  repo.ex  repositories.ex  search.ex  seq.ex  spaces.ex  stats.ex  storage.ex  struct_bio.ex
lib/cyanea_web/: router.ex  user_auth.ex
native/cyanea_native/: Cargo.toml
native/cyanea_native/src/: align.rs  bridge.rs  chem.rs  core.rs  gpu.rs  io.rs  lib.rs  ml.rs  omics.rs  phylo.rs  seq.rs  stats.rs  structs.rs
test/cyanea/: accounts_test.exs  activity_test.exs  align_test.exs  artifacts_test.exs  billing_test.exs  blobs_test.exs  chem_test.exs  citations_test.exs  compute_test.exs  core_test.exs  datasets_metadata_test.exs  datasets_test.exs  discussions_test.exs  federation_test.exs  follows_test.exs  formats_test.exs  gpu_test.exs  ml_test.exs  native_test.exs  notebooks_cells_test.exs  notebooks_execution_test.exs  notebooks_test.exs  notifications_test.exs  omics_test.exs  ontologies_test.exs  organizations_test.exs  phylo_test.exs  previews_test.exs  protocols_structured_test.exs  protocols_test.exs  seq_test.exs  (+7 more)
(+139 files in other folders)
