[package]
name = "cyanea_native"
version = "0.1.0"
edition = "2021"
authors = ["Cyanea Team"]
description = "Native Rust extensions for Cyanea"

[lib]
name = "cyanea_native"
crate-type = ["cdylib"]

[dependencies]
# NIF bindings
rustler = "0.34"

# Cyanea Labs
cyanea-core = { path = "../../../labs/cyanea-core" }
cyanea-seq = { path = "../../../labs/cyanea-seq" }
cyanea-io = { path = "../../../labs/cyanea-io", features = ["vcf", "bed", "gff"] }
cyanea-align = { path = "../../../labs/cyanea-align" }
cyanea-omics = { path = "../../../labs/cyanea-omics" }
cyanea-stats = { path = "../../../labs/cyanea-stats" }
cyanea-ml = { path = "../../../labs/cyanea-ml" }
cyanea-chem = { path = "../../../labs/cyanea-chem" }
cyanea-struct = { path = "../../../labs/cyanea-struct" }
cyanea-phylo = { path = "../../../labs/cyanea-phylo", features = ["ml"] }
cyanea-gpu = { path = "../../../labs/cyanea-gpu" }

[features]
default = ["parallel"]
parallel = [
    "cyanea-align/parallel",
    "cyanea-ml/parallel",
    "cyanea-stats/parallel",
    "cyanea-gpu/parallel",
]

[profile.release]
lto = true
opt-level = 3
